# 1w-If

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-serial.sh  build.sh  flash-fs-serial.sh  flash-fs.sh  flash-serial.sh  flash.sh  monitor-serial.sh  monitor.sh  platformio.ini
.github/workflows/: platform-io.yml
data/: config.html  console.html  index.html  login.html  ota.html  style.css
data/css/: style.css
data/js/: config-util.js  menu.js
doc/hardware/: 1w-If_bom.csv  pcb-parts.md
doc/logo/: color-palette.md  logo-white-transparent-framed.inkscape.dxf
firmware/: .clang-format  .gitignore  build.sh  flash-fs-serial.sh  flash-fs.sh  git-rev.py  monitor.sh  partitions.csv  platformio.ini  reset_hw.sh
firmware/data/: config.html  console.html  index.html  login.html  ota.html
firmware/src/: main.cpp  version_info.h
firmware/test/: .gitignore  example_test_env_config.yaml
hardware/: .gitignore  1w-If.kicad_pcb  1w-If.kicad_pro  1w-If.kicad_sch  fp-lib-table  sym-lib-table
hardware/housing/: 1w-If Housing - Bottom.step  1w-If Housing - DIN Rail Clip.step  1w-If Housing - Top.step
hardware/jlcpcb/: project.db
src/: main.cpp
src/cmd/: command.h  command_handler.cpp  command_handler.h  ds18b20_command_handler.cpp  ds18b20_command_handler.h  ds2438_command_handler.cpp  ds2438_command_handler.h  json_builder.cpp  json_constants.h  json_parser.cpp  json_parser.h  presence_command_handler.cpp  presence_command_handler.h  subscriptions_manager.cpp  subscriptions_manager.h  timer.cpp  timer.h
src/config/: ethernet_config.cpp  ethernet_config.h  logging_config.cpp  logging_config.h  mqtt_config.cpp  mqtt_config.h  onewire_config.cpp  onewire_config.h  ota_config.h  persistency.cpp  persistency.h  webserver_config.cpp  webserver_config.h
src/ethernet/: ethernet.cpp
src/i2c/: arduino_i2c_bus.cpp  ds2484_device.cpp  ds2484_device.h  i2c_bus.h  i2c_device.h  tca9548a_device.cpp  tca9548a_i2c_bus.cpp
src/logging/: log_level.h  logger.cpp  logger.h  logutil.cpp  logutil.h  multi_logger.cpp  multi_logger.h  status_led.cpp  status_led.h  web_socket_logger.cpp  web_socket_logger.h
src/mqtt/: mqtt_client.cpp  mqtt_client.h  mqtt_message_handler.cpp  mqtt_message_handler.h
src/one_wire/: ds18b20.cpp  ds2411.h  ds2438.cpp  ds2438.h  ds2484_one_wire_bus.h  (+7 more)
test/: example_test_env_config.yaml  pyproject.toml
test/tests/: test_mqtt_action_control.py  test_mqtt_action_read.py  test_mqtt_action_scan.py  test_mqtt_action_subscription.py
test/tests/env/: config_model.py  mqtt_fixture.py  mqtt_message.py  mqtt_protocol.py  one_wire_address.py  one_wire_device_def.py  time_util.py
(+114 files in other folders)
