[project]
name = "1w-If-testsuite"
version = "1.0.0"
description = "1w-If Testsuite"
authors = [{ name = "Sebastian Waldvogel", email = "sebastian@waldvogels.de" }]
license = { text = "MIT" }

# ---- Dependencies ----------------------------------------------------------------------------------------------------
requires-python = ">=3.13"
dependencies = ["paho-mqtt==2.1.0", "PyYAML==6.0.3"]
[dependency-groups]
lint = ["ruff==0.14.3"]
pytest = ["pytest-cov==7.0.0", "pytest-mock==3.15.1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# ---- Python PDM ------------------------------------------------------------------------------------------------------

[tool.pdm.scripts]
lint = "ruff check ."
format = "ruff format ."
tests = "pytest --verbose"

# ---- Ruff ------------------------------------------------------------------------------------------------------------

[tool.ruff]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]
line-length = 120

[tool.ruff.lint]
select = [
    "ARG",
    "ANN", # Warnings for missing type annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    #"D",  # Missing docstrings (autodoc)
    "DOC", # pydoclint
    "E",   # pycodestyle - Error
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle - Warning
    "UP",  # pyupgrade
    #"PL", # Pylint
]
extend-select = ["DOC"]
preview = true
ignore = ["UP006", "UP035", "D100", "D101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC2701", "ANN001", "ANN201", "F811"]

[tool.ruff.lint.pydocstyle]
convention = "google"


# ---- pylint ----------------------------------------------------------------------------------------------------------

[tool.pylint]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
ignore-paths = [".venv", ".git", "__pypackages__", "tests/env", "tests"]
accept-no-param-doc = "no"
accept-no-raise-doc = "no"
accept-no-yields-doc = "no"
default-docstring-type = "google"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114",
    "C0115",
    "C0116", # missing docstring
    "W9015",
    "W9006", # missing param and raises doc
]

# ---- pytest ----------------------------------------------------------------------------------------------------------

[tool.pytest.ini_options]
markers = ["mqtt_capture_data: MQTT config"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
